--- a/index.html
+++ b/index.html
@@ -59,243 +59,191 @@
   </div>
 
 <script>
-window.onerror = (msg, src, line, col, err) => {
-  document.body.insertAdjacentHTML('afterbegin',
-    `<pre style="position:fixed;inset:8px auto auto 8px;z-index:9999;background:#111;color:#fff;padding:8px 10px;border-radius:8px;max-width:95vw;white-space:pre-wrap">
-JS ERROR: ${msg}
-at ${src}:${line}:${col}</pre>`);
-};
-/* ---------- viewport sizing (simple & reliable) ---------- */
+/* 0) (Optional) tiny error overlay for debugging */
+/*
+window.onerror=(m,s,l,c)=>document.body.insertAdjacentHTML('afterbegin',
+  `<pre style="position:fixed;inset:8px auto auto 8px;z-index:9999;background:#111;color:#fff;padding:8px 10px;border-radius:8px;max-width:95vw;white-space:pre-wrap">
+JS ERROR: ${m} at ${s}:${l}:${c}</pre>`);
+*/
+
+/* 1) Viewport sizing */
 function setAppVh(){
-  const vv = window.visualViewport;
-  const h = vv && vv.height ? vv.height : (window.innerHeight || document.documentElement.clientHeight || 0);
-  if (h>0) document.documentElement.style.setProperty('--app-vh', h + 'px');
+  const vv=window.visualViewport;
+  const h=vv&&vv.height?vv.height:(window.innerHeight||document.documentElement.clientHeight||0);
+  if(h>0) document.documentElement.style.setProperty('--app-vh',h+'px');
 }
 setAppVh();
-addEventListener('resize', setAppVh, {passive:true});
-addEventListener('orientationchange', setAppVh, {passive:true});
-if (window.visualViewport) window.visualViewport.addEventListener('resize', setAppVh, {passive:true});
+addEventListener('resize',setAppVh,{passive:true});
+addEventListener('orientationchange',setAppVh,{passive:true});
+if(window.visualViewport) window.visualViewport.addEventListener('resize',setAppVh,{passive:true});
 
-/* ---------- canvas + DPR ---------- */
-const canvas = document.getElementById('gameCanvas');
-const ctx = canvas.getContext('2d');
+/* 2) Canvas + DPR */
+const canvas=document.getElementById('gameCanvas');
+const ctx=canvas.getContext('2d');
 
-let W = 480, H = 300, floorY = H - 6;
+/* ---- declare player BEFORE fitCanvasDPR ever touches it ---- */
+let player={ x:50, y:0, w:60, h:40, dy:0, onGround:false, jumps:0 };
+
+let W=480,H=300,floorY=H-6;
 function fitCanvasDPR(){
-  const rect = canvas.getBoundingClientRect();
-  const DPR = Math.max(1, window.devicePixelRatio||1);
-  canvas.width  = Math.max(1, Math.round(rect.width  * DPR));
-  canvas.height = Math.max(1, Math.round(rect.height * DPR));
+  const rect=canvas.getBoundingClientRect();
+  const DPR=Math.max(1,window.devicePixelRatio||1);
+  canvas.width =Math.max(1,Math.round(rect.width *DPR));
+  canvas.height=Math.max(1,Math.round(rect.height*DPR));
   ctx.setTransform(DPR,0,0,DPR,0,0);
-  W = Math.max(1, Math.round(rect.width));
-  H = Math.max(1, Math.round(rect.height));
-  floorY = H - 6;
-  if (player.y > floorY - player.h){ player.y = floorY - player.h; player.dy = 0; player.onGround = true; player.jumps = 0; }
+  W=Math.max(1,Math.round(rect.width));
+  H=Math.max(1,Math.round(rect.height));
+  floorY=H-6;
+  // guard: only adjust if player is defined
+  if (player && typeof player==='object' && player.y>floorY-player.h){
+    player.y=floorY-player.h; player.dy=0; player.onGround=true; player.jumps=0;
+  }
 }
 fitCanvasDPR();
-addEventListener('resize', fitCanvasDPR);
-if (window.visualViewport) window.visualViewport.addEventListener('resize', fitCanvasDPR, {passive:true});
+addEventListener('resize',fitCanvasDPR);
+if(window.visualViewport) window.visualViewport.addEventListener('resize',fitCanvasDPR,{passive:true});
 
-/* ---------- assets ---------- */
-const vespaImg = new Image();
-vespaImg.src = 'Blue Vespa Right.png';   // keep file name EXACT
-vespaImg.onerror = () => console.warn('Vespa PNG not found. Check the file name/path.');
+/* 3) Assets */
+const vespaImg=new Image();
+vespaImg.src='Blue Vespa Right.png'; // keep exact name
+vespaImg.onerror=()=>console.warn('Vespa PNG not found. Check file name/path.');
 
-/* ---------- game state & knobs ---------- */
-let running = false, score = 0;
-const player = { x: 50, y: 0, w: 60, h: 40, dy: 0, onGround: false, jumps: 0 };
-let obstacles = [];
+/* 4) Game state & knobs */
+let running=false, score=0;
+let obstacles=[];
 
-// speed model
-const SPEED_BASE = 4;
-const SPEED_MAX  = 15; // you set this
-let speed = SPEED_BASE;
+// speed
+const SPEED_BASE=4, SPEED_MAX=15; let speed=SPEED_BASE;
 
 // spacing / difficulty (your tuned values)
-const world = {
-  pTallBase: 0.14,
-  pTallLate: 0.34,
-  tallStreak: 0,
-  singleStreak: 0,
-  maxTallStreak: 1,
-  maxSingleStreak: 4,
-  warmupScore: 150,
-  rampRate:   0.0025,
-  rtSingle: 0.90,
-  rtTall:   1.05,
-  rtJitter: 0.10
+const world={
+  pTallBase:0.14, pTallLate:0.34, tallStreak:0, singleStreak:0, maxTallStreak:1, maxSingleStreak:4,
+  warmupScore:150, rampRate:0.0025, rtSingle:0.90, rtTall:1.05, rtJitter:0.10
 };
-
-// distance‑based spawning
-let distSinceSpawn = 0;
-let nextGapPx = 520;
+let distSinceSpawn=0, nextGapPx=520;
 
 // physics
-const GRAVITY = 0.5;
-const JUMP_VEL = 9;
+const GRAVITY=0.5, JUMP_VEL=9;
 
-/* ---------- obstacles ---------- */
+/* 5) Obstacles */
 function decideTall(s){
-  const blend = Math.min(1, Math.max(0, (s - world.warmupScore)/1500));
-  let pTall = world.pTallBase*(1-blend) + world.pTallLate*blend;
-  if (s < 800) pTall *= 0.55;          // early game: more singles
-  if (world.tallStreak>0) pTall *= 0.5; // soft cooldown after a tall
-  if (world.tallStreak   >= world.maxTallStreak)   return false;
-  if (world.singleStreak >= world.maxSingleStreak) return true;
-  return Math.random() < pTall;
+  const t=Math.min(1,Math.max(0,(s-world.warmupScore)/1500));
+  let p=world.pTallBase*(1-t)+world.pTallLate*t;
+  if(s<800) p*=0.55;
+  if(world.tallStreak>0) p*=0.5;
+  if(world.tallStreak>=world.maxTallStreak) return false;
+  if(world.singleStreak>=world.maxSingleStreak) return true;
+  return Math.random()<p;
 }
 function triangleSpec(tall){
-  const ramp = Math.min(1, Math.max(0, score/1200));
+  const ramp=Math.min(1,Math.max(0,score/1200));
   const smallMin=28, smallMax=42;
-  const tallMin = 42 + (50-42)*ramp;
-  const tallMax = 60 + (74-60)*ramp;
-  const h = tall ? (tallMin + Math.random()*(tallMax-tallMin))
-                 : (smallMin + Math.random()*(smallMax-smallMin));
-  const base = h*0.9 + Math.random()*8;
-  return { base, height:h };
+  const tallMin=42+(50-42)*ramp, tallMax=60+(74-60)*ramp;
+  const h=tall?(tallMin+Math.random()*(tallMax-tallMin))
+              :(smallMin+Math.random()*(smallMax-smallMin));
+  const base=h*0.9+Math.random()*8;
+  return {base,height:h};
 }
-function planNextGapPx(v, tall){
-  const pxps = Math.max(1, v*60);
-  const rtBase = tall ? world.rtTall : world.rtSingle;
-  const rt = Math.max(0.65, rtBase + ((Math.random()*2-1)*world.rtJitter));
-  const margin = 90 + v*6 + (tall?40:0);
-  return Math.max(240, Math.round(pxps*rt + margin));
+function planNextGapPx(v,tall){
+  const pxps=Math.max(1,v*60);
+  const rtBase=tall?world.rtTall:world.rtSingle;
+  const rt=Math.max(0.65, rtBase+((Math.random()*2-1)*world.rtJitter));
+  const margin=90+v*6+(tall?40:0);
+  return Math.max(240, Math.round(pxps*rt+margin));
 }
 function spawnObstacle(tall){
-  const spec = triangleSpec(tall);
-  obstacles.push({
-    x: W + 20, y: floorY, base: spec.base, height: spec.height,
-    color: tall ? '#ef476f' : '#06d6a0', tall
-  });
-  if (tall){ world.tallStreak++; world.singleStreak = 0; }
-  else     { world.singleStreak++; world.tallStreak  = 0; }
-
-  const guessNextTall = decideTall(score);
-  nextGapPx = planNextGapPx(speed, guessNextTall);
-  distSinceSpawn = 0;
+  const spec=triangleSpec(tall);
+  obstacles.push({x:W+20,y:floorY,base:spec.base,height:spec.height,color:tall?'#ef476f':'#06d6a0',tall});
+  if(tall){ world.tallStreak++; world.singleStreak=0; } else { world.singleStreak++; world.tallStreak=0; }
+  nextGapPx=planNextGapPx(speed,decideTall(score));
+  distSinceSpawn=0;
 }
 
-/* ---------- core loop ---------- */
+/* 6) Loop */
 function resetGame(){
   score=0; speed=SPEED_BASE; obstacles.length=0;
   world.tallStreak=0; world.singleStreak=0;
-  nextGapPx = 360;              // quick first show, not immediate
-  distSinceSpawn = 0;
-
-  player.y = floorY - player.h;
-  player.dy=0; player.onGround=true; player.jumps=0;
+  nextGapPx=360; distSinceSpawn=0;
+  player.y=floorY-player.h; player.dy=0; player.onGround=true; player.jumps=0;
 }
 function startGame(){
-  // resize to post‑tap viewport (iOS toolbar collapse)
   fitCanvasDPR(); setTimeout(fitCanvasDPR,50); setTimeout(fitCanvasDPR,250);
-
   document.getElementById('startScreen').style.display='none';
   document.getElementById('gameOverScreen').style.display='none';
-  resetGame();
-  running = true;
+  resetGame(); running=true; window.__startCalled=true;
   requestAnimationFrame(frame);
 }
 function endGame(){
-  running = false;
-  document.getElementById('finalScore').textContent = `Score: ${score}`;
+  running=false;
+  document.getElementById('finalScore').textContent=`Score: ${score}`;
   document.getElementById('gameOverScreen').style.display='flex';
 }
-
 function frame(){
-  if (!running) return;
-
+  if(!running) return;
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  // road line
-  ctx.fillStyle = '#2a2a2a';
-  ctx.fillRect(0, floorY, W, 2);
+  // ground
+  ctx.fillStyle='#2a2a2a'; ctx.fillRect(0,floorY,W,2);
 
-  // speed ramp (slow & steady)
-  speed = Math.min(SPEED_MAX, SPEED_BASE + world.rampRate * score);
+  // speed ramp
+  speed=Math.min(SPEED_MAX, SPEED_BASE + world.rampRate*score);
 
   // player physics
-  player.y += player.dy;
-  player.dy += GRAVITY;
-  if (player.y >= floorY - player.h){
-    player.y = floorY - player.h; player.dy = 0;
-    if (!player.onGround){ player.onGround = true; player.jumps = 0; }
-  } else player.onGround = false;
+  player.y+=player.dy; player.dy+=GRAVITY;
+  if(player.y>=floorY-player.h){ player.y=floorY-player.h; player.dy=0; if(!player.onGround){player.onGround=true; player.jumps=0;} }
+  else player.onGround=false;
 
-  // draw player
-  if (vespaImg.complete && vespaImg.naturalWidth){
-    ctx.drawImage(vespaImg, player.x, player.y, player.w, player.h);
-  } else {
-    ctx.fillStyle = '#1e8bff';
-    ctx.fillRect(player.x, player.y, player.w, player.h);
-  }
+  // player draw
+  if(vespaImg.complete && vespaImg.naturalWidth) ctx.drawImage(vespaImg, player.x, player.y, player.w, player.h);
+  else { ctx.fillStyle='#1e8bff'; ctx.fillRect(player.x, player.y, player.w, player.h); }
 
   // obstacles
-  for (let i=obstacles.length-1;i>=0;i--){
-    const o=obstacles[i];
-    o.x -= speed;
+  for(let i=obstacles.length-1;i>=0;i--){
+    const o=obstacles[i]; o.x-=speed;
+    ctx.fillStyle=o.color; ctx.beginPath();
+    ctx.moveTo(o.x,o.y); ctx.lineTo(o.x+o.base/2,o.y-o.height); ctx.lineTo(o.x+o.base,o.y);
+    ctx.closePath(); ctx.fill();
 
-    ctx.fillStyle = o.color;
-    ctx.beginPath();
-    ctx.moveTo(o.x, o.y);
-    ctx.lineTo(o.x + o.base/2, o.y - o.height);
-    ctx.lineTo(o.x + o.base, o.y);
-    ctx.closePath();
-    ctx.fill();
-
-    // collision (bbox vs player)
     const box={x:o.x,y:o.y-o.height,w:o.base,h:o.height};
-    if (player.x < box.x + box.w &&
-        player.x + player.w > box.x &&
-        player.y < box.y + box.h &&
-        player.y + player.h > box.y){
-      endGame();
-    }
-
-    if (o.x + o.base < 0){ obstacles.splice(i,1); score++; }
+    if(player.x<box.x+box.w && player.x+player.w>box.x && player.y<box.y+box.h && player.y+player.h>box.y){ endGame(); }
+    if(o.x+o.base<0){ obstacles.splice(i,1); score++; }
   }
 
-  // spawn by distance
-  distSinceSpawn += speed;
-  if (distSinceSpawn >= nextGapPx){
-    spawnObstacle(decideTall(score));
-  }
+  // spawn
+  distSinceSpawn+=speed;
+  if(distSinceSpawn>=nextGapPx) spawnObstacle(decideTall(score));
 
   // HUD
-  ctx.fillStyle='#fff';
-  ctx.font='16px system-ui, sans-serif';
-  ctx.fillText(`Score: ${score}`, 10, 24);
+  ctx.fillStyle='#fff'; ctx.font='16px system-ui, sans-serif'; ctx.fillText(`Score: ${score}`,10,24);
 
   requestAnimationFrame(frame);
 }
 
-/* ---------- controls ---------- */
-function jump(){
-  if (player.jumps < 2){
-    player.dy = -JUMP_VEL;
-    player.jumps++;
-    player.onGround = false;
-  }
-}
-const startBtn = document.getElementById('startButton');
-const restartBtn = document.getElementById('restartButton');
-const startOverlay = document.getElementById('startScreen');
+/* 7) Controls + robust starters */
+function jump(){ if(player.jumps<2){ player.dy=-9; player.jumps++; player.onGround=false; } }
 
-startBtn.addEventListener('click', startGame);
-restartBtn.addEventListener('click', startGame);
-// pointer‑first + touch fallbacks
+const startBtn=document.getElementById('startButton');
+const restartBtn=document.getElementById('restartButton');
+const startOverlay=document.getElementById('startScreen');
+
+startBtn.addEventListener('click',startGame);
+restartBtn.addEventListener('click',startGame);
 ['pointerdown','touchend','click'].forEach(t=>{
-  startBtn.addEventListener(t, e=>{ e.preventDefault?.(); startGame(); }, {passive:false});
-  restartBtn.addEventListener(t, e=>{ e.preventDefault?.(); startGame(); }, {passive:false});
-  startOverlay.addEventListener(t, e=>{ e.preventDefault?.(); startGame(); }, {passive:false});
-  document.addEventListener(t, (e)=>{ if(!running){ e.preventDefault?.(); startGame(); }}, {once:true, passive:false});
+  startBtn.addEventListener(t,e=>{ e.preventDefault?.(); startGame(); },{passive:false});
+  restartBtn.addEventListener(t,e=>{ e.preventDefault?.(); startGame(); },{passive:false});
+  startOverlay.addEventListener(t,e=>{ e.preventDefault?.(); startGame(); },{passive:false});
+  document.addEventListener(t,(e)=>{ if(!running){ e.preventDefault?.(); startGame(); }},{once:true,passive:false});
 });
-document.addEventListener('keydown', (e)=>{
-  if (e.code==='Space'){ e.preventDefault(); if(!running) startGame(); else jump(); }
-  else if (e.code==='KeyR'){ e.preventDefault(); startGame(); }
+document.addEventListener('keydown',e=>{
+  if(e.code==='Space'){ e.preventDefault(); if(!running) startGame(); else jump(); }
+  else if(e.code==='KeyR'){ e.preventDefault(); startGame(); }
 });
-canvas.addEventListener('touchstart', (e)=>{ e.preventDefault(); if(!running) startGame(); else jump(); }, {passive:false});
+canvas.addEventListener('touchstart',e=>{ e.preventDefault(); if(!running) startGame(); else jump(); },{passive:false});
 
-/* ---------- leaderboard ---------- */
+// last‑resort auto‑start
+window.addEventListener('load',()=>setTimeout(()=>{ if(!window.__startCalled) try{ startGame(); }catch{} },1200));
+
+/* 8) Leaderboard */
 const API='https://scooter-game-api.vercel.app';
 function loadLeaderboard(){
   fetch(`${API}/api/leaderboard`).then(r=>r.json()).then(rows=>{
@@ -315,11 +263,11 @@ function saveScore(){
     body:JSON.stringify({name:initials, score})
   }).then(()=>loadLeaderboard());
 }
-document.getElementById('saveScoreButton').addEventListener('click', saveScore);
-document.getElementById('skipButton').addEventListener('click', ()=>{ document.getElementById('gameOverScreen').style.display='none'; });
+document.getElementById('saveScoreButton').addEventListener('click',saveScore);
+document.getElementById('skipButton').addEventListener('click',()=>{ document.getElementById('gameOverScreen').style.display='none'; });
 
-/* expose for inline onclick as last resort */
-window.__start = startGame;
+/* expose for inline onclick */
+window.__start=startGame;
 
 loadLeaderboard();
 </script>
