--- a/index.html
+++ b/index.html
@@ -5,44 +5,47 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 <title>Blue Vespa Scooter Game</title>
 <style>
-  :root { --app-vh: 100vh; }
+  :root {
+    --app-vh: 100vh;         /* real viewport height */
+    --header-h: 150px;       /* height used when leaderboard is visible */
+  }
 
   html,body{margin:0;padding:0}
   body{
-    background:#cfe9ff; /* sky tint around canvas */
+    background:#cfe9ff;      /* page sky */
     color:#111;
     font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-    overflow:hidden;display:flex;flex-direction:column;align-items:center;
+    overflow:hidden; display:flex; flex-direction:column; align-items:center;
     padding-bottom:env(safe-area-inset-bottom);
-    -webkit-user-select:none;user-select:none;
+    -webkit-user-select:none; user-select:none;
   }
 
-  /* --- Leaderboard --- */
+  /* -------- Leaderboard -------- */
   #leaderboard{
     width:100%; max-width:720px;
     padding:8px 12px 6px;
     background:#212529; color:#fff;
     border-bottom:2px solid rgba(255,255,255,.08);
     box-sizing:border-box;
-    transition:opacity .2s ease;
   }
   #leaderboard.hidden{ display:none; }
+
   #leaderboard h3{ margin:6px 0 8px; text-align:center; letter-spacing:.5px }
   #leaderboard ol{ margin:0 auto 6px; padding-left:24px; max-width:680px; line-height:1.35 }
 
-  /* --- Game area --- */
+  /* -------- Game area -------- */
   #wrap{ position:relative; width:100%; max-width:720px; }
   canvas{
     display:block; width:100%;
+    /* canvas shows its own sky/road; height adapts to header present/hidden */
     background:linear-gradient(#bfe2ff, #8cc8ff 62%, #63b1ff 62%, #63b1ff 100%);
-    /* height uses real viewport height to avoid iOS toolbar jumps */
-    height:calc(var(--app-vh,100vh) - 150px - env(safe-area-inset-bottom));
+    height:calc(var(--app-vh,100vh) - var(--header-h) - env(safe-area-inset-bottom));
     min-height:420px; max-height:calc(100vh - env(safe-area-inset-bottom));
     border:2px solid #000; border-radius:12px; box-sizing:border-box;
     touch-action:manipulation;
   }
 
-  /* --- Overlays --- */
+  /* -------- Overlays -------- */
   .overlay{
     position:absolute; inset:0; z-index:10;
     display:flex; flex-direction:column; align-items:center; justify-content:center;
@@ -65,7 +68,7 @@
 </style>
 </head>
 <body>
-  <!-- Leaderboard (visible on Start/GameOver, hidden while playing) -->
+  <!-- Leaderboard (visible on Start / Game Over, hidden while playing) -->
   <div id="leaderboard">
     <h3>Top 10</h3>
     <ol id="lbList"></ol>
@@ -103,12 +106,12 @@
   </div>
 
 <script>
-/* ---------------- Small debug aid (optional) ----------------
+/* ----- (Optional) tiny error overlay -----
 window.onerror=(m,s,l,c)=>document.body.insertAdjacentHTML('afterbegin',
 `<pre style="position:fixed;inset:8px auto auto 8px;z-index:9999;background:#111;color:#fff;padding:8px 10px;border-radius:8px;max-width:95vw;white-space:pre-wrap">JS ERROR: ${m} at ${s}:${l}:${c}</pre>`);
----------------------------------------------------------------- */
+------------------------------------------- */
 
-/* 1) Real viewport height for iOS/Firefox toolbars */
+/* 1) Real viewport height (iOS/Firefox toolbars) */
 function setAppVh(){
   const vv=window.visualViewport;
   const h=vv&&vv.height ? vv.height : (window.innerHeight||document.documentElement.clientHeight||0);
@@ -120,46 +123,48 @@ addEventListener('orientationchange', setAppVh, {passive:true});
 if(window.visualViewport) window.visualViewport.addEventListener('resize', setAppVh, {passive:true});
 
 /* 2) Canvas & DPR */
-const canvas = document.getElementById('gameCanvas');
-const ctx = canvas.getContext('2d');
+const canvas=document.getElementById('gameCanvas');
+const ctx=canvas.getContext('2d');
 
-/* declare player BEFORE fitCanvasDPR may touch it (prevents TDZ crash) */
-let player = { x: 90, y: 0, w: 120, h: 80, dy: 0, onGround: false, jumps: 0 };
+/* declare player BEFORE sizing logic ever touches it */
+let player={ x: 90, y: 0, w: 120, h: 80, dy: 0, onGround: false, jumps: 0 };
 
-let W=960, H=540, floorY=H*0.82;
+let W=960, H=540, floorY=Math.round(H*0.79); /* slightly higher road for visibility */
 function fitCanvasDPR(){
-  const rect = canvas.getBoundingClientRect();
-  const DPR  = Math.max(1, window.devicePixelRatio||1);
-  canvas.width  = Math.max(1, Math.round(rect.width  * DPR));
-  canvas.height = Math.max(1, Math.round(rect.height * DPR));
+  const rect=canvas.getBoundingClientRect();
+  const DPR=Math.max(1,window.devicePixelRatio||1);
+  canvas.width =Math.max(1,Math.round(rect.width *DPR));
+  canvas.height=Math.max(1,Math.round(rect.height*DPR));
   ctx.setTransform(DPR,0,0,DPR,0,0);
-  W = Math.max(1, Math.round(rect.width));
-  H = Math.max(1, Math.round(rect.height));
-  floorY = Math.round(H*0.82);
-  if (player && player.y > floorY - player.h){
-    player.y = floorY - player.h; player.dy = 0; player.onGround = true; player.jumps = 0;
+  W=Math.max(1,Math.round(rect.width));
+  H=Math.max(1,Math.round(rect.height));
+  floorY=Math.round(H*0.79);
+  if(player && player.y>floorY-player.h){
+    player.y=floorY-player.h; player.dy=0; player.onGround=true; player.jumps=0;
   }
 }
 fitCanvasDPR();
-addEventListener('resize', fitCanvasDPR);
-if(window.visualViewport) window.visualViewport.addEventListener('resize', fitCanvasDPR, {passive:true});
+addEventListener('resize',fitCanvasDPR);
+if(window.visualViewport) window.visualViewport.addEventListener('resize',fitCanvasDPR,{passive:true});
 
 /* 3) Assets */
-const vespaImg = new Image();
-vespaImg.src = 'Blue Vespa Right.png'; // exact filename & spaces
-vespaImg.onerror = () => console.warn('Vespa PNG not found. Check file name/path.');
+const vespaImg=new Image();
+vespaImg.src='Blue Vespa Right.png'; // exact name (with spaces)
+vespaImg.onerror=()=>console.warn('Vespa PNG not found. Check file name/path.');
 
-/* 4) World & tuning (your values) */
+/* 4) World & tuning */
 let running=false, score=0;
 let obstacles=[];
 
-const SPEED_BASE=6;           // slightly brisk start for good jump timing
-const SPEED_MAX =15;          // you set this earlier
+/* Slower, friendlier start */
+const SPEED_BASE=4.0;
+const SPEED_MAX =15;      /* your cap */
 let speed=SPEED_BASE;
 
+/* Your difficulty knobs */
 const world={
   pTallBase:0.14, pTallLate:0.34, tallStreak:0, singleStreak:0, maxTallStreak:1, maxSingleStreak:4,
-  warmupScore:150, rampRate:0.0025,   // gentle long-term ramp
+  warmupScore:150, rampRate:0.0025,
   rtSingle:0.90, rtTall:1.05, rtJitter:0.10
 };
 
@@ -167,16 +172,13 @@ let distSinceSpawn=0, nextGapPx=520;
 
 const GRAVITY=0.55, JUMP_VEL=10.2;
 
-/* 5) Helpers & draw */
+/* 5) Draw helpers */
 function drawRoad(){
-  // asphalt & lane line
   const roadTop=floorY+2;
-  ctx.fillStyle='#2a2a2a'; ctx.fillRect(0, roadTop, W, H-roadTop);
-  ctx.fillStyle='rgba(255,255,255,.8)';
+  ctx.fillStyle='#2a2a2a'; ctx.fillRect(0, roadTop, W, H-roadTop); /* asphalt */
+  ctx.fillStyle='rgba(255,255,255,.85)';                           /* lane line */
   const dashW=28, gap=22, y=roadTop+18;
-  for(let x=-((Date.now()/30)% (dashW+gap)); x<W; x+=dashW+gap){
-    ctx.fillRect(x, y, dashW, 4);
-  }
+  for(let x=-((Date.now()/30)% (dashW+gap)); x<W; x+=dashW+gap) ctx.fillRect(x,y,dashW,4);
 }
 function drawVespa(){
   if(vespaImg.complete && vespaImg.naturalWidth) ctx.drawImage(vespaImg, player.x, player.y, player.w, player.h);
@@ -187,7 +189,7 @@ function drawVespa(){
 function decideTall(s){
   const t=Math.min(1, Math.max(0, (s - world.warmupScore)/1500));
   let p=world.pTallBase*(1-t) + world.pTallLate*t;
-  if(s<800) p*=0.55;           // early gameplay: mostly single jumps
+  if(s<800) p*=0.55;
   if(world.tallStreak>0) p*=0.5;
   if(world.tallStreak>=world.maxTallStreak) return false;
   if(world.singleStreak>=world.maxSingleStreak) return true;
@@ -196,18 +198,17 @@ function decideTall(s){
 function triangleSpec(tall){
   const ramp=Math.min(1, Math.max(0, score/1200));
   const smallMin=28, smallMax=42;
-  const tallMin = 42 + (50-42)*ramp;
-  const tallMax = 60 + (74-60)*ramp;
+  const tallMin = 42 + (50-42)*ramp, tallMax = 60 + (74-60)*ramp;
   const h = tall ? (tallMin + Math.random()*(tallMax - tallMin))
                  : (smallMin + Math.random()*(smallMax - smallMin));
   const base = h*0.9 + Math.random()*8;
   return { base, height:h };
 }
 function planNextGapPx(v,tall){
-  const pxps = Math.max(1, v*60);                 // pixels per second
-  const rtBase = tall? world.rtTall : world.rtSingle;
-  const rt = Math.max(0.65, rtBase + ((Math.random()*2-1)*world.rtJitter));
-  const margin = 100 + v*6 + (tall?46:0);         // generous margin at speed
+  const pxps=Math.max(1, v*60);
+  const rtBase=tall?world.rtTall:world.rtSingle;
+  const rt=Math.max(0.65, rtBase + ((Math.random()*2-1)*world.rtJitter));
+  const margin=100 + v*6 + (tall?46:0);
   return Math.max(260, Math.round(pxps*rt + margin));
 }
 function spawnObstacle(tall){
@@ -222,14 +223,15 @@ function spawnObstacle(tall){
 function resetGame(){
   score=0; speed=SPEED_BASE; obstacles.length=0;
   world.tallStreak=0; world.singleStreak=0;
-  nextGapPx=420; distSinceSpawn=260;               // first obstacle not immediate
-  player.y = floorY - player.h; player.dy=0; player.onGround=true; player.jumps=0;
+  nextGapPx=420; distSinceSpawn=260;  // first obstacle soon, not immediate
+  player.y=floorY-player.h; player.dy=0; player.onGround=true; player.jumps=0;
 }
 function startGame(){
-  // hide leaderboard during gameplay
+  // hide leaderboard during gameplay & shrink header height to give canvas full space
   document.getElementById('leaderboard').classList.add('hidden');
+  document.documentElement.style.setProperty('--header-h','0px');
 
-  // iOS toolbar collapses after first tap — refit a couple times
+  // refit after toolbar collapse
   fitCanvasDPR(); setTimeout(fitCanvasDPR,60); setTimeout(fitCanvasDPR,260);
 
   document.getElementById('startScreen').style.display='none';
@@ -241,17 +243,19 @@ function endGame(){
   running=false;
   document.getElementById('finalScore').textContent=`Score: ${score}`;
   document.getElementById('gameOverScreen').style.display='flex';
-  // show leaderboard again on game over
+
+  // show leaderboard again & restore header height
   document.getElementById('leaderboard').classList.remove('hidden');
+  document.documentElement.style.setProperty('--header-h','150px');
+  setAppVh(); fitCanvasDPR();
 }
 function frame(){
   if(!running) return;
-
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
   drawRoad();
 
-  // speed ramp: slow & steady
+  // slow, steady ramp
   speed = Math.min(SPEED_MAX, SPEED_BASE + world.rampRate*score);
 
   // player physics
@@ -268,19 +272,12 @@ function frame(){
     const o=obstacles[i]; o.x -= speed;
 
     ctx.fillStyle=o.color; ctx.beginPath();
-    ctx.moveTo(o.x, o.y);
-    ctx.lineTo(o.x + o.base/2, o.y - o.height);
-    ctx.lineTo(o.x + o.base, o.y);
+    ctx.moveTo(o.x,o.y); ctx.lineTo(o.x+o.base/2,o.y-o.height); ctx.lineTo(o.x+o.base,o.y);
     ctx.closePath(); ctx.fill();
 
     const box={x:o.x,y:o.y-o.height,w:o.base,h:o.height};
-    if(player.x < box.x + box.w &&
-       player.x + player.w > box.x &&
-       player.y < box.y + box.h &&
-       player.y + player.h > box.y){
-      endGame();
-    }
-    if(o.x + o.base < 0){ obstacles.splice(i,1); score++; }
+    if(player.x<box.x+box.w && player.x+player.w>box.x && player.y<box.y+box.h && player.y+player.h>box.y){ endGame(); }
+    if(o.x+o.base<0){ obstacles.splice(i,1); score++; }
   }
 
   // spawn by distance
@@ -288,15 +285,15 @@ function frame(){
   if(distSinceSpawn >= nextGapPx) spawnObstacle(decideTall(score));
 
   // HUD
-  ctx.fillStyle='#0b2540';
-  ctx.font='16px system-ui, sans-serif';
-  ctx.fillText(`Score: ${score}`, 12, 26);
+  ctx.fillStyle='#08304d';
+  ctx.font='18px system-ui, sans-serif';
+  ctx.fillText(`Score: ${score}`, 12, 28);
 
   requestAnimationFrame(frame);
 }
 
 /* 8) Controls & robust starters */
-function jump(){ if(player.jumps < 2){ player.dy = -JUMP_VEL; player.jumps++; player.onGround=false; } }
+function jump(){ if(player.jumps<2){ player.dy=-JUMP_VEL; player.jumps++; player.onGround=false; } }
 
 const startBtn=document.getElementById('startButton');
 const restartBtn=document.getElementById('restartButton');
@@ -318,7 +315,6 @@ canvas.addEventListener('touchstart', (e)=>{ e.preventDefault(); if(!running) st
 
 /* 9) Leaderboard (hidden during play) */
 const API='https://scooter-game-api.vercel.app';
-
 function loadLeaderboard(){
   fetch(`${API}/api/leaderboard`).then(r=>r.json()).then(rows=>{
     const ul=document.getElementById('lbList'); ul.innerHTML='';
@@ -329,7 +325,6 @@ function loadLeaderboard(){
     });
   }).catch(()=>{ document.getElementById('lbList').innerHTML=''; });
 }
-
 function saveScore(){
   const initials=(document.getElementById('playerInitials').value||'').toUpperCase().replace(/[^A-Z0-9]/g,'').slice(0,3);
   if(!initials){ document.getElementById('gameOverScreen').style.display='none'; return; }
@@ -344,7 +339,7 @@ document.getElementById('skipButton').addEventListener('click', ()=>{ document.g
 /* expose for Start button inline onclick */
 window.__start = startGame;
 
-/* initial leaderboard (visible on start & on game over) */
+/* initial leaderboard for Start screen */
 loadLeaderboard();
 </script>
 </body>
